--- a/SimulationLib/SimulationLib.csproj
+++ b/SimulationLib/SimulationLib.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,16 +42,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddCell.cs" />
     <Compile Include="Cell.cs" />
     <Compile Include="Coordinate.cs" />
-    <Compile Include="Interfaces\ISimulation.cs" />
+    <Compile Include="CustomExceptions\ExceptionInform.cs" />
+    <Compile Include="CustomExceptions\InvalidColumnsValueException.cs" />
+    <Compile Include="CustomExceptions\InvalidInputIterationsException.cs" />
+    <Compile Include="CustomExceptions\InvalidRowsValueException.cs" />
+    <Compile Include="CustomExceptions\InvalidValueForObjectsException.cs" />
+    <Compile Include="CustomExceptions\OceanOverflowException.cs" />
+    <Compile Include="Interfaces\ICell.cs" />
+    <Compile Include="Interfaces\IConsoleView.cs" />
+    <Compile Include="Interfaces\IDirection.cs" />
+    <Compile Include="Interfaces\IDisplayElements.cs" />
+    <Compile Include="Interfaces\IEnterData.cs" />
     <Compile Include="Obstacle.cs" />
     <Compile Include="Ocean.cs" />
+    <Compile Include="ParticipantsDirection.cs" />
     <Compile Include="Predator.cs" />
     <Compile Include="Prey.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\ConsoleView.cs" />
-    <Compile Include="UI\DoubleBuffered.cs" />
+    <Compile Include="Randomize.cs" />
     <Compile Include="Variable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
