--- a/PreyPredatorWinForms/PreyPredatorWinForms.csproj
+++ b/PreyPredatorWinForms/PreyPredatorWinForms.csproj
@@ -96,6 +96,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="WinFormDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
